tests/check/illegal_select.co
// RUN: not choreo -sa=check %s 2>&1 | FileCheck %s

__co__ auto illegal_select(f32 [128, 128] i) {
  tile_factor : [32, 16];

  parallel p by 1 {
    with idx = {x_tile, y_tile} in [32, 16] {
      foreach x_tile, y_tile {
        i_shared = dma.copy.async i.chunkat(x_tile, y_tile) => shared;
        parallel q by 1{
          tile_factor_local : [1, 4];
          local f32 [i_shared.span / tile_factor_local] i_local0;
          local f32 [4] i_local4;
          local s32 [i_shared.span / tile_factor_local] i_local5;
          with idx = {p_tile, q_tile} in [1, 4] {
            i_local_s0 = dma.copy.async i_shared.chunkat(p_tile, q_tile) => select(q_tile % 2, i_local0, i_local4) after i_shared;
            i_local_s1 = dma.copy.async i_shared.chunkat(p_tile, q_tile) => select(q_tile % 2, i_local0, i_local5) after i_shared;
            i_local_s2 = dma.copy.async i_shared.chunkat(q_tile, q_tile) => local;
            f = select (#x_tile / #q, i_local_s0, i_local_s2);
            c = select (1, i_local_s0, i_local_s1);
            d = select (i, i_local_s0, i_local_s1);
          }
        }
      }
    }
  }
}

// CHECK: error: expect `i_local4`(local f32 mdspan<1> []) to be the same type as `i_local0`(local f32 mdspan<2> []).
// CHECK: error: expect `i_local5`(local s32 mdspan<2> []) to be the same type as `i_local0`(local f32 mdspan<2> []).
// CHECK: error: expect `i` to be a (bounded) integer type, but got SpannedType.
// CHECK-NOT: error:
// CHECK: Totally 3 errors have been detected.
